--- a/front/styles/sass/login.css
+++ b/front/styles/sass/login.css
@@ -88,6 +88,8 @@ main .logo_container {
   justify-content: center;
 }
 main .logo_container .logo_place {
+  color: #ffffff;
+  font-size: xx-large;
   background: #c4c4c4;
   height: 200px;
   width: 200px;
