--- a/front/styles/sass/_commons.scss
+++ b/front/styles/sass/_commons.scss
@@ -1,6 +1,14 @@
 $btnColor: #6fcf97;
 $borderInputColor: #ccc;
+$white: #ffffff;
 
+@mixin inputStyle{
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid $borderInputColor;
+  box-sizing: border-box;
+}
 
 @mixin onAllPage {
   height: 85vh;
