--- a/front/styles/sass/_commons.scss
+++ b/front/styles/sass/_commons.scss
@@ -11,7 +11,7 @@ $white: #ffffff;
 }
 
 @mixin onAllPage {
-  height: 85vh;
+  min-height: 85vh;
   display: flex;
   justify-content: center;
   align-items: center;
