--- a/front/styles/sass/login.css
+++ b/front/styles/sass/login.css
@@ -51,7 +51,7 @@ header .navigation .links a {
 }
 
 main {
-  height: 85vh;
+  min-height: 85vh;
   display: flex;
   justify-content: center;
   align-items: center;
