--- a/front/styles/sass/checkout.scss
+++ b/front/styles/sass/checkout.scss
@@ -65,14 +65,14 @@ main {
       .total{
         display: flex;
         justify-content: space-between;
-        width: 20vh;
+        width: 20vw;
       }
     }
 
     .btn_container {
+      margin: 20px 0;
       display: flex;
       justify-content: flex-end;
-      margin-top: 10px;
 
       .btn_place{
         display: flex;
