--- a/front/styles/sass/_commons.scss
+++ b/front/styles/sass/_commons.scss
@@ -1,6 +1,9 @@
 $btnColor: #6fcf97;
 $borderInputColor: #ccc;
 $white: #ffffff;
+$lineColor: #a7a7a7;
+
+
 
 @mixin inputStyle{
   padding: 12px 20px;
@@ -10,12 +13,12 @@ $white: #ffffff;
   box-sizing: border-box;
 }
 
-@mixin onAllPage {
+@mixin onAllPage($clr) {
   min-height: 85vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #f2f2f2;
+  background: $clr;
 }
 
 @mixin btnStyle {
