--- a/front/styles/sass/main-page.css
+++ b/front/styles/sass/main-page.css
@@ -68,9 +68,6 @@ header .navigation .links a {
   margin: 10px 1.5vw;
   display: flex;
   flex-direction: column;
-  animation-name: img-ani;
-  animation-duration: 2s;
-  animation-timing-function: ease-in;
 }
 .category_list .category_item img {
   height: 50px;
@@ -101,9 +98,6 @@ main .coupon_list .coupon_card {
   margin: 2vh 2vw;
   max-width: 260px;
   background: #ffffff;
-  animation-name: img-ani;
-  animation-duration: 2s;
-  animation-timing-function: ease-in;
 }
 main .coupon_list .coupon_card .image_part img {
   width: 100%;
@@ -118,15 +112,6 @@ main .coupon_list .coupon_card .description_part {
 main .coupon_list .coupon_card .description_part .coupon_name {
   font-size: large;
 }
-main .coupon_list .coupon_card .description_part .brief_description {
-  font-size: smaller;
-}
-main .coupon_list .coupon_card .description_part .expires_in {
-  display: flex;
-  justify-content: flex-end;
-  font-size: smaller;
-  color: #999999;
-}
 main .coupon_list .coupon_card .description_part .icon {
   display: flex;
   justify-content: flex-end;
@@ -135,6 +120,9 @@ main .coupon_list .coupon_card .description_part .icon {
 main .coupon_list .coupon_card .description_part .icon i {
   margin-right: 10px;
   color: #757575;
+}
+main .coupon_list .coupon_card .brief_description {
+  font-size: smaller;
 }
 main .coupon_list .coupon_card .line {
   border-top: 1px solid #f5f5f5;
